<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drawer.DrawerActivity">

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:elevation="8dp"
            android:background="#ff00ff"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="App Name"
                android:gravity="center"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_drawer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:text="@string/enjoy_drawer"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/ll_options_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option1"/>

            <Button
                android:id="@+id/btn_option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2"/>

            <Button
                android:id="@+id/btn_option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option3"/>

            <Button
                android:id="@+id/btn_option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option4"/>

            <Button
                android:id="@+id/btn_option5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option5"/>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>